# src/main/java/com/biller/patti/farmer/FarmerController.java
@@ -1,6 +1,7 @@
 package com.biller.patti.farmer;
 
 import com.openapi.gen.springboot.api.GetFarmerApi;
+import com.openapi.gen.springboot.api.GetFarmerByIdApi;
 import com.openapi.gen.springboot.api.SaveFarmerApi;
 import com.openapi.gen.springboot.dto.FarmerDto;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -8,11 +9,12 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.context.request.NativeWebRequest;
 
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
 
 @RestController
-public class FarmerController implements GetFarmerApi, SaveFarmerApi {
+public class FarmerController implements GetFarmerApi, SaveFarmerApi, GetFarmerByIdApi {
 
     @Autowired
     FarmerService farmerService;
@@ -28,6 +30,13 @@ public class FarmerController implements GetFarmerApi, SaveFarmerApi {
         return ResponseEntity.ok(farmerService.getFarmersMatchingPattern(keyword));
     }
 
+    @CrossOrigin(origins = "http://localhost:4200")
+    @Override
+    public ResponseEntity<FarmerDto> getFarmersById(Long farmerId) {
+        return ResponseEntity.ok(farmerService.getFarmerId(farmerId));
+    }
+
+    @CrossOrigin(origins = "http://localhost:4200")
     @Override
     public ResponseEntity<FarmerDto> insertFarmer(FarmerDto farmerDto) {
         return ResponseEntity.ok(farmerService.saveFarmerRecord(farmerDto));
